--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,6 @@
-# MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/jboard
+MONGODB_URI=mongodb://localhost:27017
 MONGODB_DATABASE_NAME=jboard
 MONGODB_JOB_COLLECTION=jobs
 
-# Application Configuration
 PORT=8080
-
-# AWS Configuration (for production)
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your-aws-access-key-id
-AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
-
-# ECS Configuration (for GitHub Actions deployment)
-ECR_REPOSITORY=jboard-go-crud
-ECS_SERVICE=jboard-service
-ECS_CLUSTER=jboard-cluster
-ECS_TASK_DEFINITION=.aws/task-definition.json
-CONTAINER_NAME=jboard-container
+GO_ENV=development
