--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -69,16 +69,36 @@ jobs:
         platforms: linux/amd64
 
     - name: Deploy to Azure Container Apps
-      uses: azure/container-apps-deploy-action@v2
-      with:
-        appSourcePath: ${{ github.workspace }}
-        containerAppName: ${{ env.CONTAINER_APP_NAME }}
-        resourceGroup: ${{ env.RESOURCE_GROUP }}
-        containerAppEnvironment: ${{ env.CONTAINER_APP_ENVIRONMENT }}
-        imageToDeploy: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
-        targetPort: 8080
-        ingress: internal
-        environmentVariables: |
-          MONGODB_URI=${{ secrets.MONGODB_URI }}
-          MONGODB_DATABASE_NAME=${{ secrets.MONGODB_DATABASE_NAME }}
-          MONGODB_JOB_COLLECTION=${{ secrets.MONGODB_JOB_COLLECTION }}
+      run: |
+        # Check if container app exists
+        if az containerapp show --name ${{ env.CONTAINER_APP_NAME }} --resource-group ${{ env.RESOURCE_GROUP }} &>/dev/null; then
+          echo "Container App exists, updating..."
+          az containerapp update \
+            --name ${{ env.CONTAINER_APP_NAME }} \
+            --resource-group ${{ env.RESOURCE_GROUP }} \
+            --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            --set-env-vars \
+              MONGODB_URI="${{ secrets.MONGODB_URI }}" \
+              MONGODB_DATABASE_NAME="${{ secrets.MONGODB_DATABASE_NAME }}" \
+              MONGODB_JOB_COLLECTION="${{ secrets.MONGODB_JOB_COLLECTION }}"
+        else
+          echo "Container App does not exist, creating..."
+          az containerapp create \
+            --name ${{ env.CONTAINER_APP_NAME }} \
+            --resource-group ${{ env.RESOURCE_GROUP }} \
+            --environment ${{ env.CONTAINER_APP_ENVIRONMENT }} \
+            --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            --target-port 8080 \
+            --ingress internal \
+            --env-vars \
+              MONGODB_URI="${{ secrets.MONGODB_URI }}" \
+              MONGODB_DATABASE_NAME="${{ secrets.MONGODB_DATABASE_NAME }}" \
+              MONGODB_JOB_COLLECTION="${{ secrets.MONGODB_JOB_COLLECTION }}" \
+            --registry-server ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io \
+            --registry-username ${{ secrets.ACR_USERNAME }} \
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
+            --cpu 0.25 \
+            --memory 0.5Gi \
+            --min-replicas 1 \
+            --max-replicas 3
+        fi
